--- a/ronald/landing-proyec-astro/src/pages/signup.astro
+++ b/ronald/landing-proyec-astro/src/pages/signup.astro
@@ -58,7 +58,7 @@ import SigninSlider from "@layouts/function-components/SigninSlider.jsx";
         </div>
         <SigninSlider
           client:load
-          title="A suite product accelerate <br /> your career design"
+          title="Das un paso al mundo <br /> de la innovacion"
         />
       </div>
     </div>
