--- a/ronald/landing-proyec-astro/src/pages/rutas.astro
+++ b/ronald/landing-proyec-astro/src/pages/rutas.astro
@@ -46,11 +46,10 @@ import SigninSlider from "@layouts/function-components/SigninSlider.jsx";
                   placeholder="ingresa fecha de salida"
                 />
               </div>
-              <input
+              <a
                 class="btn btn-primary mt-10 block w-full"
-                type="submit"
-                value="Click aqui"
-              />
+                type="submit"  href="/resultadorutas"
+              > da Click aqui </a>
             </form>
           </div>
         </div>
